v0.8/roadmap.md
---
title: "Astronomer Roadmap"
description: "Features that Astronomer plans to develop in coming months."
date: 2018-11-02T00:00:00.000Z
slug: "roadmap"
---

Below is a summary of our future release plans. You can also view our public
[kanban board](https://github.com/orgs/astronomer/projects/16) for more details.

If you'd like to request a feature,
visit [our Github](https://github.com/astronomer/astronomer/issues).

| Release | Features |
|---------------------------|------------|
| v0.9 | Support for New Airflow RBAC model<br />Full support for Kubernetes Executor<br />Support for Airflow 1.10.3<br />Configurable Docker Registry backend<br />New Astro CLI commands<br />Bug fixes |
| v0.10 | Direct integration with Okta<br />New Container Status tab for Airflow deployments, gives end-users a view of how each part of their Airflow deployment is presently functioning.<br />Metrics tab for improved end-user monitoring<br />Support for New Airflow RBAC model<br />Full support for Kubernetes Executor<br />Switch base image for deployments from Alpine to Debian<br />Improvements to log viewer |
| v1.0 | Integrate new Airflow Operator into Commander<br />Remaining bug fixes + polishing |
| Later | View All Image Tags - give end-users a view into their Docker Registry entries<br />Support for executing remote Airflow commands with our Astro CLI<br />Add React to Airflow UI for real-time updates<br />Adoption metrics added to UI and shipped with telemetry - user engagement, Airflow usage growth - we need to give customers and ourselves the ability to measure how well they are adopting Airflow<br />User Audit Logging (Deployments, Configuration changes) - enterprise feature to keep track of who has done what |
